RESOLVED FIXED218729
[GPUProcess] Regression(r268632) Garbage is rendered on speakers when using WebAudio
https://bugs.webkit.org/show_bug.cgi?id=218729
Summary [GPUProcess] Regression(r268632) Garbage is rendered on speakers when using W...
Chris Dumez
Reported 2020-11-09 16:16:55 PST
garbage is rendered on speakers when using WebAudio and when enabling the GPU Process. Easily testable with this demo: https://webaudiodemos.appspot.com/MIDIDrums/index.html This is a regression from using a CARingBuffer.
Attachments
Patch (10.37 KB, patch)
2020-11-09 16:43 PST, Chris Dumez
no flags
Patch (10.41 KB, patch)
2020-11-10 08:26 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-11-09 16:43:23 PST
Peng Liu
Comment 2 2020-11-09 19:40:41 PST
Comment on attachment 413644 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=413644&action=review > Source/WebKit/ChangeLog:14 > + remain to processed (usually 0). As a result, RemoteAudioDestinationProxy::renderOnRenderingThead() Good catch! I misunderstood the comment of PushPullFIFO::pull(). The return value of this function is the number of samples *left* in the FIFO, not the number of samples fetched from the FIFO. > Source/WebKit/WebProcess/GPU/media/RemoteAudioDestinationProxy.cpp:140 > completionHandler(0, 0); Not a problem of this patch. But we have to early return here after calling completionHandler().
Chris Dumez
Comment 3 2020-11-10 08:26:52 PST
EWS
Comment 4 2020-11-10 10:52:08 PST
Committed r269630: <https://trac.webkit.org/changeset/269630> All reviewed patches have been landed. Closing bug and clearing flags on attachment 413697 [details].
Radar WebKit Bug Importer
Comment 5 2020-11-10 10:53:16 PST
Note You need to log in before you can comment on or make changes to this bug.