Source/WebKit/WebProcess/GPU/media/RemoteAudioDestinationProxy.cpp
@@ -132,26 +132,18 @@ void RemoteAudioDestinationProxy::stop(CompletionHandler<void(bool)>&& completio
 }
 
 #if PLATFORM(COCOA)
-void RemoteAudioDestinationProxy::requestBuffer(double sampleTime, uint64_t hostTime, uint64_t numberOfFrames, CompletionHandler<void(uint64_t, uint64_t)>&& completionHandler)
+void RemoteAudioDestinationProxy::requestBuffer(double sampleTime, uint64_t hostTime, uint64_t framesToRender, CompletionHandler<void(uint64_t, uint64_t)>&& completionHandler)
 {
     ASSERT(!isMainThread());
 
-    if (!hasEnoughFrames(numberOfFrames))
-        completionHandler(0, 0);
-
-    m_renderCompletionHandler = WTFMove(completionHandler);
-    m_audioBufferList->setSampleCount(numberOfFrames);
-
-    AudioDestinationCocoa::render(sampleTime, hostTime, numberOfFrames, m_audioBufferList->list());
-}
-
-void RemoteAudioDestinationProxy::renderOnRenderingThead(size_t framesToRender)
-{
-    ASSERT(m_renderCompletionHandler);
+    if (!hasEnoughFrames(framesToRender))
+        return completionHandler(0, 0);
 
     auto startFrame = m_currentFrame;
+    m_audioBufferList->setSampleCount(framesToRender);
 
-    AudioDestinationCocoa::renderOnRenderingThead(framesToRender);
+    AudioDestinationCocoa::render(sampleTime, hostTime, framesToRender, m_audioBufferList->list());
+
     m_currentFrame += framesToRender;
 
     m_ringBuffer->store(m_audioBufferList->list(), framesToRender, startFrame);
@@ -159,7 +151,7 @@ void RemoteAudioDestinationProxy::renderOnRenderingThead(size_t framesToRender)
     uint64_t boundsStartFrame;
     uint64_t boundsEndFrame;
     m_ringBuffer->getCurrentFrameBounds(boundsStartFrame, boundsEndFrame);
-    m_renderCompletionHandler(boundsStartFrame, boundsEndFrame);
+    completionHandler(boundsStartFrame, boundsEndFrame);
 }
 #endif
 
